--- a/app.kv
+++ b/app.kv
@@ -1,12 +1,3 @@
-
-<Lockscreen>:
-    BoxLayout:
-        size: root.size
-        Button:
-            id: button1
-            text: "Change text"
-            on_release: root.change_text()
-        Label:
-            id: label1
-            text: root.time
-
+<Time@Button>
+    font_size: 32
+    colour
