--- a/Main_App.kv
+++ b/Main_App.kv
@@ -1,6 +1,5 @@
 #:kivy 1.9.0
-
-<Time@Button>:
+<TimeDate@Label>:
     font_size: 32
     font_colour: 51,153,255
     size: 150, 50
@@ -12,9 +11,9 @@
     BoxLayout:
         orientation:'vertical'
         padding: 300, 10, 10, 300
-        Time:
-            text:"dsd"
-        Time: 
+        TimeDate:
+            text: app.hour
+        TimeDate: 
             text:"fdf"
     Button:
         text:"hi"
