--- a/Main_App.kv
+++ b/Main_App.kv
@@ -1,33 +1,39 @@
 #: import CheckBox kivy.uix.checkbox
 
+<Lock@Button>:
+    background_normal: "/Users/Benac2003/Documents/Codding/Smart-Watch/image/loading-1.jpg"
+<Home@Button>:
+    background_normal: " "
+
+<Homescreen>:
+    BoxLayout:
+        Lock:
+            pos_hint: {"centre_x":1 ,"y": 1 }
+            on_press:
+                root.manager.transition.direction = "left"
+                root.manager.transisition.duration = 1
+                root.manager.current =  "Lockscreen"
+
+<Lockscreen>:
+    BoxLayout:
+        Home:
+            pos_hint: {"centre_x":1 ,"y": 1 }
+            on_press:
+                root.manager.transition.direction = "left"
+                root.manager.transisition.duration = 1
+                root.manager.current =  "Homescreen"
+
+        
+
 <TimeDate@Label>:
     font_size: 32
     font_colour: 51,153,255
     size: 150, 50
     background_colour: 1,1,1,1 
 
+
 <CustFloatLayout>:
     TimeDate: 
         text:"fdsf"
         size_hint_x: .80
         pos_hint: {"left":5, "centre_y":5}
-
-    Label:
-        text: str(slider_id.value)
-    
-    Slider:
-        id: slider_id
-        min: -100
-        max: 100
-        value:0
-        step:1
-        pos_hint: {"right_x": 1, "centre_y":1}
-    
-    Label:
-        text: "ON/OFF"
-
-    Switch:
-        id: switch_id
-        on_active: root.switch_on(self, self.active)
-        pos_hint: {"left_x": 1, "centre_y":1}
-            
